--- a/crates/emulator-core/Cargo.toml
+++ b/crates/emulator-core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "emulator"
+name = "emulator-core"
 version = { workspace = true }
 authors = { workspace = true }
 license = { workspace = true }
