--- a/crates/emulator/Cargo.toml
+++ b/crates/emulator/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "emulator-core"
+name = "emulator"
 version = { workspace = true }
 authors = { workspace = true }
 license = { workspace = true }
