--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ quote = "1.0.35"
 syn = { version = "2", features = ["full"] }
 enum_dispatch = "0.3"
 thiserror = "1.0"
+macroquad = "0.4.8"
 
 [profile.release]
 codegen-units = 1
