--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ syn = { version = "2", features = ["full"] }
 enum_dispatch = "0.3"
 thiserror = "1.0"
 macroquad = "0.4.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [profile.release]
 codegen-units = 1
