--- a/crates/emulator/Cargo.toml
+++ b/crates/emulator/Cargo.toml
@@ -10,4 +10,7 @@ keywords = { workspace = true }
 
 [dependencies]
 enum_dispatch.workspace = true
-thiserror.workspace = true
+
+[dev-dependencies]
+serde.workspace = true
+serde_json.workspace = true
