--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ thiserror = "1.0"
 macroquad = "0.4.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+convert_case = "0.6"
 
 [profile.release]
 codegen-units = 1
