--- a/crates/emulator-derive/Cargo.toml
+++ b/crates/emulator-derive/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "emulator"
+name = "emulator-derive"
 version = { workspace = true }
 authors = { workspace = true }
 license = { workspace = true }
@@ -7,11 +7,18 @@ edition = { workspace = true }
 repository = { workspace = true }
 keywords = { workspace = true }
 
+[lib]
+proc-macro = true
+
 
 [dependencies]
-enum_dispatch.workspace = true
+deluxe.workspace = true
+proc-macro-error.workspace = true
+proc-macro2.workspace = true
+quote.workspace = true
+syn.workspace = true
+convert_case.workspace = true
 
-emulator-derive = { path = "../emulator-derive" }
 
 [dev-dependencies]
 serde.workspace = true
