add debugging and fix interrupts

--- a/crates/runner/Cargo.toml
+++ b/crates/runner/Cargo.toml
@@ -10,5 +10,7 @@ keywords = { workspace = true }
 
 [dependencies]
 macroquad.workspace = true
+sqlite.workspace = true
+thiserror.workspace = true
 
 emulator = { path = "../emulator" }
