--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ macroquad = "0.4.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 convert_case = "0.6"
+sqlite = "0.36.0"
 
 [profile.release]
 codegen-units = 1
